<resources>
    <string name="app_name">LyonCRM</string>

    <!-- Splash -->
    <string name="txt_splash">Lyon CRM</string>

    <!-- General -->
    <string name="msg_field_obligatory">Campo obligatorio</string>
    <string name="msg_field_must_numeric">El campo debe de ser numerico</string>
    <string name="msg_field_must_text">El campo debe de ser texto</string>
    <string name="msg_field_must_email">El campo debe de ser email</string>
    <string name="msg_field_must_alphanumeric">El campo debe de ser alfanumerico</string>
    <string name="next">Siguiente</string>
    <string name="back">Atras</string>


    <!-- Login -->
    <string name="welcome_log">Ninja Systems</string>
    <string name="email_log">EMAIL</string>
    <string name="password_log">PASSWORD</string>
    <string name="remember_me_log">Recuerdame</string>
    <string name="login_log">Login</string>
    <string name="forgot_password_log">Olvide mi password</string>
    <string name="data_incorrect">Datos incorrectos</string>


    <!-- Registration -->
    <string name="reg_"></string>
    <string name="reg_title_reg">Registro</string>
    <string name="reg_name">Nombre</string>
    <string name="reg_last_name_one">Apellido paterno</string>
    <string name="reg_last_name_two">Apellido materno</string>
    <string name="reg_eMail">Correo electronico</string>
    <string name="reg_password">Password</string>
    <string name="reg_position">Cargo</string>
    <string name="reg_profile">perfil</string>
    <string name="reg_nickname">Alias</string>
    <string name="reg_officePhone">Telefono oficina</string>
    <string name="reg_cellPhone">Telefono celular</string>
    <string name="reg_webSite">Sitio web</string>
    <string name="reg_fax">Fax</string>
    <string name="reg_birthdate">Fecha de nacimiento</string>
    <string name="reg_register">Registrar</string>
    <string name="reg_user_save_correct">El usuario se alameceno correctamente</string>
    <string name="reg_user_save_incorrect">El usuario no se pudo almacenar</string>

    <string name="reg_address_street">Calle</string>
    <string name="reg_address_cologne">Colonia</string>
    <string name="reg_address_postalCode">Código postal</string>
    <string name="reg_address_outdoorNumber">Numero Exterior</string>
    <string name="reg_address_interiorNumber">Numero Interior</string>
    <string name="reg_address_city">Ciudad</string>
    <string name="reg_address_state">Estado</string>
    <string name="reg_address_country">País</string>


    <string name="reg_socialnet_facebook">Facebook</string>
    <string name="reg_socialnet_twitter">Twitter</string>
    <string name="reg_socialnet_instagram">Instagram</string>
    <string name="reg_socialnet_google">Google</string>


    <string name="reg_regioncof_language">Idioma</string>
    <string name="reg_regioncof_regional_config_country">País</string>
    <string name="reg_regioncof_time_format">Formato de hora</string>
    <string name="reg_regioncof_time_zone">Zona Horaria</string>


    <string name="reg_vis_title">Registro visita</string>
    <string name="reg_vis_name">Nombre contacto</string>
    <string name="reg_vis_adress">Direccion</string>
    <string name="reg_vis_company">Empresa</string>
    <string name="reg_vis_date">Fecha</string>
    <string name="reg_vis_save">Agendar</string>
    <string name="reg_vis_save_correct">Visita almacenada correctamente</string>
    <string name="reg_vis_save_incorrect">La visita no se pudo almacenar</string>

    <!-- ListVisits -->
    <string name="lst_visit_title_all">Todas las Visitas</string>
    <string name="lst_visit_title_Ok">No visitadas</string>
    <string name="lst_visit_title_no">Visitadas</string>


    <!--temp -->
    <string name="temp_definition">Definir Contenido</string>
    <string name="temp_example_date">00/00/0000</string>
    <string name="temp_example_company">company</string>
    <string name="temp_example_small">ExampleExample</string>
    <string name="temp_example_medium">ExampleExampleExampleExample</string>
    <string name="temp_example_big">ExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExampleExample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_profile">Perfil</string>
    <string name="action_visit">Visita</string>
    <string name="action_user">Usuario</string>
    <string name="action_sesion">Cerrar Sesion</string>


</resources>
