<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ninja.mexico.ui.fragments.PersonalDataRegFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reg_title_reg"
            android:textSize="50dp"
            android:layout_margin="20dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/tv_registration"
            android:text="@string/temp_example_small"/>
        <EditText
            android:id="@+id/etNameRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_name"/>
        <EditText
            android:id="@+id/etLastNameOneRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_last_name_one"/>
        <EditText
            android:id="@+id/etLastNameTwoRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_last_name_two"/>
        <EditText
            android:id="@+id/etEmailRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_eMail"/>
        <EditText
            android:id="@+id/etPasswordUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_password"/>
        <EditText
            android:id="@+id/etPositionRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_position"/>
        <EditText
            android:id="@+id/etNickNameRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_nickname"/>
        <EditText
            android:id="@+id/etOfficePhoneRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_officePhone"/>
        <EditText
            android:id="@+id/etCellPhoneRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_cellPhone"/>
        <EditText
            android:id="@+id/etWebSiteRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_webSite"/>
        <EditText
            android:id="@+id/etFaxRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_fax"/>
        <EditText
            android:id="@+id/etBirthdateRegUser"
            style="@style/et_registration"
            android:drawableLeft="@mipmap/ic_example"
            android:hint="@string/reg_birthdate"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                style="@style/tv_registration"
                android:layout_weight="2"
                android:visibility="visible"
                android:textSize="16dp"
                android:gravity="center_vertical"
                android:textStyle="normal"
                android:text= "@string/reg_profile"/>
            <Spinner
                android:id="@+id/spTypePerfilRegUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnNextPersonal"
            style="@style/buttonLyon"
            android:text="cancel"/>

        <Button
            android:id="@+id/btnBackPersonal"
            style="@style/buttonLyon"
            android:text="next"/>

    </LinearLayout>


</LinearLayout>
