<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ninja.mexico.ui.fragments.SocialNetworkRegFragment">

    <EditText
        android:id="@+id/etFacebookSocialNetReg"
        style="@style/et_registration"
        android:drawableLeft="@mipmap/ic_example"
        android:hint="@string/reg_socialnet_facebook" />

    <EditText
        android:id="@+id/etTwitterSocialNetReg"
        style="@style/et_registration"
        android:drawableLeft="@mipmap/ic_example"
        android:hint="@string/reg_socialnet_twitter" />

    <EditText
        android:id="@+id/etInstagramSocialNetReg"
        style="@style/et_registration"
        android:drawableLeft="@mipmap/ic_example"
        android:hint="@string/reg_socialnet_instagram" />

    <EditText
        android:id="@+id/etGoogleSocialNetReg"
        style="@style/et_registration"
        android:drawableLeft="@mipmap/ic_example"
        android:hint="@string/reg_socialnet_google" />


</LinearLayout>
